--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Responsive</title>
+
+    <link rel="stylesheet" href="./style.css">
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans&family=Tilt+Neon&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <a href="./index.html">
@@ -14,8 +23,8 @@
         </a>
 
         <nav>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
+            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#contact">Contact</a>
         </nav>
     </header>
 
@@ -50,27 +59,27 @@
         <div class="cards">
 
             <div class="card">
-                <div class="image-1"></div>
+                <div class="image image-1"></div>
                 <p class="partner">Samsung</p>
             </div>
 
             <div class="card">
-                <div class="image-2"></div>
+                <div class="image image-2"></div>
                 <p class="partner">IBM</p>
             </div>
 
             <div class="card">
-                <div class="image-3"></div>
+                <div class="image image-3"></div>
                 <p class="partner">Apple</p>
             </div>
 
             <div class="card">
-                <div class="image-4"></div>
+                <div class="image image-4"></div>
                 <p class="partner">Omega</p>
             </div>
 
             <div class="card">
-                <div class="image-5"></div>
+                <div class="image image-5"></div>
                 <p class="partner">HSBC</p>
             </div>
 
@@ -82,4 +91,5 @@
     </footer>
 
 </body>
+
 </html>
